--- a/assets/css/_extends.scss
+++ b/assets/css/_extends.scss
@@ -1,7 +1,7 @@
 // global @extend classes
 // use with care
 
-%ext-nice-scrollbar {
+%ext-nice-scrollbar-x {
   &::-webkit-scrollbar {
     height: 10px;
     width: 10px;
@@ -23,26 +23,21 @@
       }
     }
   }
-  &::-webkit-scrollbar-track:vertical,
-  &::-webkit-scrollbar-track:horizontal {
-    display: none;
+  &::-webkit-scrollbar-track:vertical {
+    background-color: rgba(200, 200, 200, 0.08);
   }
   &::-webkit-scrollbar-track-piece {
     background-color: transparent;
   }
-  &::-webkit-scrollbar-thumb:vertical,
-  &::-webkit-scrollbar-thumb:horizontal {
-    background-color: rgba(200, 200, 200, 0.5);
-    border-radius: 6px;
+  &::-webkit-scrollbar-thumb:vertical {
+    background-color: rgba(200, 200, 200, 0.4);
+    border-radius: 5px;
   }
-  &:hover::-webkit-scrollbar-thumb:vertical,
-  &:hover::-webkit-scrollbar-thumb:horizontal {
+  &:hover::-webkit-scrollbar-thumb:vertical {
     background-color: rgba(200, 200, 200, 0.25);
   }
   &::-webkit-scrollbar-corner:vertical,
-  &::-webkit-scrollbar-corner:horizontal,
-  &::-webkit-scrollbar-resizer:vertical,
-  &::-webkit-scrollbar-resizer:horizontal {
+  &::-webkit-scrollbar-resizer:vertical {
     background-color: transparent;
   }
 }
@@ -74,8 +69,8 @@
     background-color: transparent;
   }
   &::-webkit-scrollbar-thumb:horizontal {
-    background-color: rgba(200, 200, 200, 0.5);
-    border-radius: 6px;
+    background-color: rgba(200, 200, 200, 0.4);
+    border-radius: 5px;
   }
   &:hover::-webkit-scrollbar-thumb:horizontal {
     background-color: rgba(200, 200, 200, 0.25);
